# GigaMessenger

./: CMakeLists.txt  Main.qml  main.cpp  messagemodel.cpp  messagemodel.h  websocketclient.cpp  websocketclient.h
